# rpcdsl

./: README.md  polyrpc-demo.cabal
app/: Main.hs
src/: PolyRPC.hs
src/PolyRPC/: Handle.hs  QQ.hs
