cabal-version:      3.8
name:               polyrpc-demo
version:            0.1.0.0
build-type:         Simple

library
  exposed-modules:    PolyRPC
                     , PolyRPC.Handle
                     , PolyRPC.QQ
  hs-source-dirs:     src
  default-language:   Haskell2010
  ghc-options:        -Wall
  build-depends:      base >=4.16 && <5
                    , template-haskell

executable polyrpc-demo-app
  main-is:            Main.hs
  hs-source-dirs:     app
  default-language:   Haskell2010
  ghc-options:        -Wall
  build-depends:      base >=4.16 && <5
                    , polyrpc-demo
